[tool.poetry]
name = "twit"
version = "0.1.0"
description = ""
authors = ["Tony Benoy <me@tonybenoy.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
snscrape = {git = "https://github.com/JustAnotherArchivist/snscrape.git"}
pandas = "^2.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
