[tool.poetry]
name = "twit"
version = "0.1.0"
description = ""
authors = ["Tony Benoy <me@tonybenoy.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.3"
snscrape = {git = "https://github.com/JustAnotherArchivist/snscrape.git"}
pandas = "^2.0.2"
transformers = "^4.30.0"
scipy = "^1.10.1"
numpy = "^1.24.3"
torch = "^2.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
